tests/fail/no_regex.stderr
error[E0277]: the trait bound `Test: RegexRepresentation` is not satisfied
  --> $DIR/no_regex.rs:10:32
   |
10 |     sscanf::scanf!("hi", "{}", Test);
   |                                ^^^^ the trait `RegexRepresentation` is not implemented for `Test`
   |
   = note: required by `REGEX`
